unpackaged/main/default/objects/Order/fields/Cantidad_Autorizada__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Autorizada__c</fullName>
    <label>Cantidad Autorizada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>