unpackaged/main/default/objects/Order/fields/Cantidad_Colocada_en_SAP__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Colocada_en_SAP__c</fullName>
    <label>Cantidad Colocada en SAP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>