unpackaged/main/default/objects/Order/fields/Cantidad_de_Cajas_Recibidas_del_Transpor__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Cajas_Recibidas_del_Transpor__c</fullName>
    <defaultValue>0</defaultValue>
    <description>La cantidad de cajas que recibio el ANS del Transportista al momento de la entrega.</description>
    <label>Cantidad de Cajas Recibidas del Transpor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>