unpackaged/main/default/objects/Order/fields/Costo_Total__c.field-meta.xml
<CustomField>
    <fullName>Costo_Total__c</fullName>
    <label>Costo Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>