unpackaged/main/default/objects/Order/fields/Delegacion__c.field-meta.xml
<CustomField>
    <fullName>Delegacion__c</fullName>
    <label>Delegacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>