unpackaged/main/default/objects/Order/fields/Fecha_de_Creaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Creaci_n__c</fullName>
    <label>Fecha de Creación</label>
    <type>Date</type>
</CustomField>