unpackaged/main/default/objects/Order/fields/Fecha_L_mite_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Fecha_L_mite_de_Entrega__c</fullName>
    <formula>CASE(MOD(WEEKDAY(Fecha_de_Creaci_n__c),7),  
 0, Fecha_de_Creaci_n__c  + 5, 
 1, Fecha_de_Creaci_n__c  + 4, 
 2, Fecha_de_Creaci_n__c  + 4, 
 3, Fecha_de_Creaci_n__c  + 4, 
 4, Fecha_de_Creaci_n__c  + 4, 
 5, Fecha_de_Creaci_n__c  + 4, 
 6, Fecha_de_Creaci_n__c  + 6, 
Fecha_de_Creaci_n__c  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Límite de Entrega</label>
    <type>Date</type>
</CustomField>