unpackaged/main/default/objects/Order/fields/Fecha_Revision_Delegacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Revision_Delegacion__c</fullName>
    <label>Fecha Revision Delegacion</label>
    <type>Date</type>
</CustomField>