unpackaged/main/default/objects/Order/fields/Fecha_Revision_SICORA__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Revision_SICORA__c</fullName>
    <label>Fecha Revision SICORA</label>
    <type>Date</type>
</CustomField>