unpackaged/main/default/objects/Order/fields/Folio_Control__c.field-meta.xml
<CustomField>
    <fullName>Folio_Control__c</fullName>
    <label>Folio Control</label>
    <length>255</length>
    <type>Text</type>
</CustomField>