unpackaged/main/default/objects/Order/fields/Nombre_Delegado_Aprobo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Delegado_Aprobo__c</fullName>
    <label>Nombre Delegado Aprobo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>