unpackaged/main/default/objects/Order/fields/Nombre_Persona_Autorizo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Persona_Autorizo__c</fullName>
    <label>Nombre Persona Autorizo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>